set(TLOC_ENGINE_CORE
    tlocBase.h
    tloc_core.h
    tloc_core.inl.h
    tloc_Core.opt.inl.h
    tloc_core.cpp
    tlocAlgorithms.h
    tlocAlgorithms.inl.h
    tlocAssert.h
    tlocAssert.cpp
    tlocAssertCustomBreak.h
    tlocAssertCustomBreak.cpp
    tlocArgs.h
    tlocArgs.cpp
    tlocConsole.h
    tlocConsole.cpp
    tlocCoreBase.h
    tlocCoreBase.cpp
    tlocCoreIncludes.h
    tlocDepVersionCheck.cpp
    tlocFunctional.h
    tlocFunctional.cpp
    tlocNoOpt.h
    tlocPair.h
    tlocPair.inl.h
    tlocStaticAssert.h
    tlocUCID.h
    tlocUCID.cpp
)
set(TLOC_ENGINE_CORE_BASE_CLASSES
    base_classes/tloc_base_classes.h
    base_classes/tloc_base_classes.inl.h
    base_classes/tloc_base_classes.opt.inl.h
    base_classes/tloc_base_classes.cpp
    base_classes/tlocDebugName.h
    base_classes/tlocDebugFileAndLine.h
    base_classes/tlocDebugFileAndLine.cpp
    base_classes/tlocInitializeAndDestroy.h
    base_classes/tlocNonCopyable.h
    base_classes/tlocNonNewable.h
    base_classes/tlocPlatformImplBase.h
    base_classes/tlocPolicyBase.h
)
set(TLOC_ENGINE_CORE_COMPONENT_SYSTEM
    component_system/tloc_component_system.h
    component_system/tloc_component_system.inl.h
    component_system/tloc_component_system.opt.inl.h
    component_system/tloc_component_system.cpp
    component_system/tlocComponent.h
    component_system/tlocComponent.inl.h
    component_system/tlocComponent.cpp
    component_system/tlocComponentMapper.h
    component_system/tlocComponentMapper.inl.h
    component_system/tlocComponentMapper.cpp
    component_system/tlocComponentPoolManager.h
    component_system/tlocComponentPoolManager.inl.h
    component_system/tlocComponentPoolManager.cpp
    component_system/tlocComponentType.h
    component_system/tlocComponentType.inl.h
    component_system/tlocComponentType.cpp
    component_system/tlocEntity.h
    component_system/tlocEntity.inl.h
    component_system/tlocEntity.cpp
    component_system/tlocEntityEvent.h
    component_system/tlocEntityManager.h
    component_system/tlocEntityManager.inl.h
    component_system/tlocEntityManager.cpp
    component_system/tlocEntityProcessingSystem.h
    component_system/tlocEntityProcessingSystem.cpp
    component_system/tlocEntitySystemBase.h
    component_system/tlocEntitySystemBase.cpp
    component_system/tlocEvent.h
    component_system/tlocEvent.inl.h
    component_system/tlocEvent.cpp
    component_system/tlocEventManager.h
    component_system/tlocEventManager.inl.h
    component_system/tlocEventManager.cpp
)
set(TLOC_ENGINE_CORE_CONFIGS
    configs/tloc_configs.h
    configs/tloc_configs.inl.h
    configs/tloc_configs.opt.inl.h
    configs/tloc_configs.cpp
    configs/tlocBuildConfig.h
    configs/tlocBuildConfig.cpp
    configs/tlocBuildConfigDefines.h
)
set(TLOC_ENGINE_CORE_CONTAINERS
    containers/tloc_containers.h
    containers/tloc_containers.inl.h
    containers/tloc_containers.opt.inl.h
    containers/tloc_containers.cpp
    containers/tlocArray.h
    containers/tlocArray.inl.h
    containers/tlocArray.cpp
    containers/tlocArrayFixed.h
    containers/tlocArrayFixed.inl.h
    containers/tlocArrayFixed.cpp
    containers/tlocContainers.h
    containers/tlocContainers.inl.h
    containers/tlocContainerTraits.h
    containers/tlocForwardList.h
    containers/tlocForwardList.inl.h
    containers/tlocForwardList.cpp
    containers/tlocHashmap.h
    containers/tlocHashmap.inl.h
    containers/tlocHashmap.cpp
    containers/tlocHashtable.h
    containers/tlocHashtable.inl.h
    containers/tlocHashtable.cpp
    containers/tlocList.h
    containers/tlocList.inl.h
    containers/tlocList.cpp
    containers/tlocQueue.h
    containers/tlocQueue.inl.h
    containers/tlocQueue.cpp
    containers/tlocStack.h
    containers/tlocStack.inl.h
    containers/tlocStack.cpp
)
set(TLOC_ENGINE_CORE_DATA_STRUCTURES
    data_structures/tloc_data_structures.h
    data_structures/tloc_data_structures.inl.h
    data_structures/tloc_data_structures.opt.inl.h
    data_structures/tloc_data_structures.cpp
    data_structures/tlocCharBuffer.h
    data_structures/tlocCharBuffer.inl.h
    data_structures/tlocProtectedBuffer.h
    data_structures/tlocProtectedBuffer.inl.h
    data_structures/tlocProtectedBuffer.cpp
    data_structures/tlocTable.h
    data_structures/tlocTable.inl.h
    data_structures/tlocTable.cpp
    data_structures/tlocTuple.h
    data_structures/tlocTuple.inl.h
    data_structures/tlocTuple.cpp
    data_structures/tlocTupleExplicitMacros.h
    data_structures/tlocVariadic.h
    data_structures/tlocVariadic.inl.h
    data_structures/tlocVariadic.cpp
    data_structures/tlocVariadicTypedefMacros.h
)
set(TLOC_ENGINE_CORE_DISPATCH
    dispatch/tloc_dispatch.h
    dispatch/tloc_dispatch.inl.h
    dispatch/tloc_dispatch.opt.inl.h
    dispatch/tloc_dispatch.cpp
    dispatch/tlocEvent.h
    dispatch/tlocEvent.cpp
    dispatch/tlocTemplateDispatch.h
    dispatch/tlocTemplateDispatchDefaults.h
)
set(TLOC_ENGINE_CORE_ERROR
    error/tloc_error.h
    error/tloc_error.inl.h
    error/tloc_error.opt.inl.h
    error/tloc_error.cpp
    error/tlocError.h
    error/tlocError.cpp
    error/tlocErrorTypes.h
)
set(TLOC_ENGINE_CORE_IO
    io/tloc_io.h
    io/tloc_io.inl.h
    io/tloc_io.opt.inl.h
    io/tloc_io.cpp
    io/tlocFileIO.h
    io/tlocFileIO.cpp
    io/tlocPath.h
    io/tlocPath.cpp
)
set(TLOC_ENGINE_CORE_ITERATORS
    iterators/tloc_iterators.h
    iterators/tloc_iterators.inl.h
    iterators/tloc_iterators.opt.inl.h
    iterators/tloc_iterators.cpp
    iterators/tlocIterator.h
    iterators/tlocIterator.inl.h
)
set(TLOC_ENGINE_CORE_LOGGER
    logging/tloc_logging.h
    logging/tloc_logging.inl.h
    logging/tloc_logging.cpp
    logging/tlocLog.h
    logging/tlocLog.cpp
    logging/tlocLogger.h
    logging/tlocLogger.cpp
    logging/tlocDefaultLogger.h
    logging/tlocDefaultLogger.cpp
    logging/tlocLoggerHelper.h
)
set(TLOC_ENGINE_CORE_MEMORY
    memory/tloc_memory.h
    memory/tloc_memory.inl.h
    memory/tloc_memory.opt.inl.h
    memory/tloc_memory.cpp
    memory/tlocAllocators.h
    memory/tlocAllocators.cpp
    memory/tlocBufferArg.h
    memory/tlocBufferArg.cpp
    memory/tlocLinkMe.cpp
    memory/tlocMemory.h
    memory/tlocMemory.cpp
    memory/tlocMemory.inl.h
    memory/tlocMemoryPool.h
    memory/tlocMemoryPool.inl.h
    memory/tlocMemoryPoolIndexedWrapper.h
    memory/tlocMemoryPoolIndexedWrapper.inl.h
)
set(TLOC_ENGINE_CORE_PARSERS
    parsers/tloc_parsers.h
    parsers/tloc_parsers.inl.h
    parsers/tloc_parsers.opt.inl.h
    parsers/tloc_parsers.cpp
)
set(TLOC_ENGINE_CORE_PLATFORM
    platform/tloc_platform.h
    platform/tloc_platform.inl.h
    platform/tloc_platform.opt.inl.h
    platform/tloc_platform.cpp
    platform/tlocPlatform.h
    platform/tlocPlatform.cpp
    platform/tlocPlatformDefines.h
    platform/tlocPlatformSpecificIncludes.h
)
set(TLOC_ENGINE_CORE_RESOURCES
    resources/tloc_resources.h
    resources/tloc_resources.inl.h
    resources/tloc_resources.opt.inl.h
    resources/tloc_resources.cpp
    resources/tlocResource.h
    resources/tlocResource.cpp
    resources/tlocResourceFactory.h
    resources/tlocResourceFactory.inl.h
    resources/tlocResourceFactory.cpp
)
set(TLOC_ENGINE_CORE_RNG
    rng/tloc_rng.h
    rng/tloc_rng.inl.h
    rng/tloc_rng.opt.inl.h
    rng/tloc_rng.cpp
    rng/tlocRandom.h
    rng/tlocRandom.cpp
    rng/tlocRngWell512.h
    rng/tlocRngWell512.inl.h
    rng/tlocRngWell512.cpp
)
set(TLOC_ENGINE_CORE_SMART_PTR
    smart_ptr/tloc_smart_ptr.h
    smart_ptr/tloc_smart_ptr.inl.h
    smart_ptr/tloc_smart_ptr.opt.inl.h
    smart_ptr/tloc_smart_ptr.cpp
    smart_ptr/tlocSharedPtr.h
    smart_ptr/tlocSharedPtr.inl.h
    smart_ptr/tlocSharedPtr.cpp
    smart_ptr/tlocSmartPtr.h
    smart_ptr/tlocSmartPtr.inl.h
    smart_ptr/tlocSmartPtr.cpp
    smart_ptr/tlocUniquePtr.h
    smart_ptr/tlocUniquePtr.inl.h
    smart_ptr/tlocUniquePtr.cpp
    smart_ptr/tlocVirtualPtr.h
    smart_ptr/tlocVirtualPtr.inl.h
    smart_ptr/tlocVirtualPtr.cpp
    smart_ptr/tlocVirtualStackObject.h
    smart_ptr/tlocVirtualStackObject.inl.h
    smart_ptr/tlocVirtualStackObject.cpp
)
set(TLOC_ENGINE_CORE_STRING
    string/tloc_string.h
    string/tloc_string.inl.h
    string/tloc_string.opt.inl.h
    string/tloc_string.cpp
    string/tlocString.h
    string/tlocString.inl.h
    string/tlocString.opt.inl.h
    string/tlocString.cpp
)
set(TLOC_ENGINE_CORE_THREADS
    threads/tloc_threads.h
    threads/tloc_threads.inl.h
    threads/tloc_threads.opt.inl.h
    threads/tloc_threads.cpp
    threads/tlocLock.h
    threads/tlocLock.cpp
    threads/tlocMutex.h
    threads/tlocMutex.cpp
    threads/tlocMutexImpl.h
    threads/tlocSleep.h
    threads/tlocSleep.cpp
    threads/tlocSleepImpl.h
    threads/tlocThread.h
    threads/tlocThread.cpp
    threads/tlocThreadImpl.h
)

if(WIN32)
  set (TLOC_ENGINE_CORE_THREADS
       ${TLOC_ENGINE_CORE_THREADS}
       threads/tlocMutexImplWin.h
       threads/tlocMutexImplWin.cpp
       threads/tlocSleepImplWin.h
       threads/tlocSleepImplWin.cpp
       threads/tlocThreadImplWin.h
       threads/tlocThreadImplWin.cpp
  )
elseif(APPLE)
  set (TLOC_ENGINE_CORE_THREADS
       ${TLOC_ENGINE_CORE_THREADS}
       threads/tlocMutexImplApple.h
       threads/tlocMutexImplApple.cpp
       threads/tlocSleepImplApple.h
       threads/tlocSleepImplApple.cpp
       threads/tlocThreadImplApple.h
       threads/tlocThreadImplApple.cpp
  )
endif()

set(TLOC_ENGINE_CORE_TIME
    time/tloc_time.h
    time/tloc_time.inl.h
    time/tloc_time.opt.inl.h
    time/tloc_time.cpp
    time/tlocTime.h
    time/tlocTime.opt.inl.h
    time/tlocTime.cpp
)
set(TLOC_ENGINE_CORE_TYPES
    types/tloc_types.h
    types/tloc_types.inl.h
    types/tloc_types.opt.inl.h
    types/tloc_types.cpp
    types/tlocAny.h
    types/tlocAny.inl.h
    types/tlocAny.cpp
    types/tlocBasicTypes.h
    types/tlocBasicTypes.cpp
    types/tlocNullptr.h
    types/tlocNullptr.cpp
    types/tlocConditionalType.h
    types/tlocConditionalType.inl.h
    types/tlocConditionalType.cpp
    types/tlocStrongType.h
    types/tlocStrongType.inl.h
    types/tlocStrongType.cpp
    types/tlocStrongTypeExplicitMacros.h
    types/tlocTemplateParams.h
    types/tlocTemplateTypesN.h
    types/tlocTemplateTypesNxM.h
    types/tlocTemplateTypesNxM.helper.h
    types/tlocTemplateTypesNxN.h
    types/tlocTypes.h
    types/tlocTypes.inl.h
    types/tlocTypes.cpp
    types/tlocTypeTraits.h
    types/tlocTypeTraitsCommonType.h
)
set(TLOC_ENGINE_CORE_UTILITIES
    utilities/tloc_utilities.h
    utilities/tloc_utilities.inl.h
    utilities/tloc_utilities.opt.inl.h
    utilities/tloc_utilities.cpp
    utilities/tlocCheckpoints.h
    utilities/tlocCheckpoints.cpp
    utilities/tlocContainerUtils.h
    utilities/tlocGroupID.h
    utilities/tlocObjectCounter.h
    utilities/tlocObjectCtorCounter.h
    utilities/tlocPointerUtils.h
    utilities/tlocTemplateUtils.h
    utilities/tlocType.h
    utilities/tlocType.cpp
    utilities/tlocUtils.h
)

include_directories(
  ../3rdParty/
)

if (TLOC_ENABLE_MEMORY_TRACKING)
  message(STATUS "MEMORY TRACKING: Enabled")
  add_definitions(-DTLOC_ENABLE_MEMORY_TRACKING)
else()
  message(STATUS "MEMORY TRACKING: Disabled")
endif()

add_library(tlocCore STATIC
  ${TLOC_ENGINE_CORE}
  ${TLOC_ENGINE_CORE_BASE_CLASSES}
  ${TLOC_ENGINE_CORE_COMPONENT_SYSTEM}
  ${TLOC_ENGINE_CORE_CONFIGS}
  ${TLOC_ENGINE_CORE_CONTAINERS}
  ${TLOC_ENGINE_CORE_DATA_STRUCTURES}
  ${TLOC_ENGINE_CORE_DISPATCH}
  ${TLOC_ENGINE_CORE_ERROR}
  ${TLOC_ENGINE_CORE_IO}
  ${TLOC_ENGINE_CORE_ITERATORS}
  ${TLOC_ENGINE_CORE_LOGGER}
  ${TLOC_ENGINE_CORE_MEMORY}
  ${TLOC_ENGINE_CORE_PARSERS}
  ${TLOC_ENGINE_CORE_PLATFORM}
  ${TLOC_ENGINE_CORE_RESOURCES}
  ${TLOC_ENGINE_CORE_RNG}
  ${TLOC_ENGINE_CORE_SMART_PTR}
  ${TLOC_ENGINE_CORE_STRING}
  ${TLOC_ENGINE_CORE_THREADS}
  ${TLOC_ENGINE_CORE_TIME}
  ${TLOC_ENGINE_CORE_TYPES}
  ${TLOC_ENGINE_CORE_UTILITIES}
)

set_platform_specific_properties(tlocCore)

# Filters to organize the source files
source_group(base_classes FILES ${TLOC_ENGINE_CORE_BASE_CLASSES})
source_group(component_system FILES ${TLOC_ENGINE_CORE_COMPONENT_SYSTEM})
source_group(configs FILES ${TLOC_ENGINE_CORE_CONFIGS})
source_group(core_containers FILES ${TLOC_ENGINE_CORE_CONTAINERS})
source_group(data_structures FILES ${TLOC_ENGINE_CORE_DATA_STRUCTURES})
source_group(dispatch FILES ${TLOC_ENGINE_CORE_DISPATCH})
source_group(error FILES ${TLOC_ENGINE_CORE_ERROR})
source_group(io FILES ${TLOC_ENGINE_CORE_IO})
source_group(iterators FILES ${TLOC_ENGINE_CORE_ITERATORS})
source_group(logger FILES ${TLOC_ENGINE_CORE_LOGGER})
source_group(memory FILES ${TLOC_ENGINE_CORE_MEMORY})
source_group(parsers FILES ${TLOC_ENGINE_CORE_PARSERS})
source_group(platform FILES ${TLOC_ENGINE_CORE_PLATFORM})
source_group(resources FILES ${TLOC_ENGINE_CORE_RESOURCES})
source_group(rng FILES ${TLOC_ENGINE_CORE_RNG})
source_group(smart_ptr FILES ${TLOC_ENGINE_CORE_SMART_PTR})
source_group(string FILES ${TLOC_ENGINE_CORE_STRING})
source_group(threads FILES ${TLOC_ENGINE_CORE_THREADS})
source_group(time FILES ${TLOC_ENGINE_CORE_TIME})
source_group(types FILES ${TLOC_ENGINE_CORE_TYPES})
source_group(utilities FILES ${TLOC_ENGINE_CORE_UTILITIES})

tloc_install_library(tlocCore tlocCore)
